# previously-on

./: .gitguardian.yaml  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  NOTICE  README.md  SECURITY.md  THIRD_PARTY_LICENSES.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml
.github/workflows/: ci.yml  recover-v0.1.0-alpha.1.yml  release.yml
benchmarks/continuation/: README.md  failure-taxonomy.v1.json  manifest.v1.json  materialize-product.mjs  runner.mjs  schedule.mjs  summarize.mjs
docs/: architecture.md  compatibility.md  design-system.md  live-compatibility-evidence.md  pilot-checklist.md  privacy.md  product-roadmap.md  release-checklist.md
fixtures/: ground-truth-scenario.json
fixtures/bootstrap/: active.json  unregistered.json
fixtures/compatibility/: live-workflow-contract.json  scenarios.json
fixtures/diagnostics/: failure.json  success.json  unknown.json  zero.json
fixtures/hooks/: post-tool-use-apply-patch.json  post-tool-use-test.json  session-start.json  stop.json  user-prompt-submit.json
scripts/: build-release.sh  generate-release-metadata.mjs  offline-smoke.sh  run-compatibility.sh  validate-live-compatibility.mjs  verify-release-bundle.mjs  verify-release-bundle.test.mjs
scripts/compatibility/: live-harness.mjs  live-harness.test.mjs  probe-codex.mjs
src/: ai_refresh.rs  app_server.rs  bounded_io.rs  codex_import.rs  config.rs  context_pack.rs  continuation.rs  contracts.rs  diagnostics.rs  domain.rs  git.rs  graph.rs  grouping.rs  hook.rs  lib.rs  main.rs  mcp.rs  redaction.rs  server.rs  setup.rs  store.rs
src/hook/: continuation_policy.rs  contract_policy.rs  ingest.rs  tool_evidence.rs
src/server/: bootstrap.rs
src/store/: maintenance.rs  operations.rs  (+2 more)
tests/: compatibility_matrix.rs  core_context_pack.rs  core_contracts.rs  core_git.rs  core_graph.rs  core_grouping.rs  core_redaction.rs  core_store.rs  gitguardian_config.rs  integration_app_server.rs  integration_cli.rs  integration_continuation.rs  integration_hook.rs  integration_ingestion.rs  integration_mcp.rs  integration_setup.rs  reliability_adversarial.rs
ui/: index.html  package-lock.json  package.json  vite.config.ts
(+110 files in other folders)
