[package]
name = "previously-on"
version = "0.1.0-alpha.3"
edition = "2021"
rust-version = "1.90"
license = "Apache-2.0"
description = "Verifiable, local-first Codex work handoffs"
homepage = "https://github.com/hongsDream/previously-on"
repository = "https://github.com/hongsDream/previously-on"
documentation = "https://docs.rs/previously-on"
readme = "README.md"
keywords = ["codex", "context", "git", "mcp", "provenance"]
categories = ["command-line-utilities", "development-tools"]
include = [
    "/Cargo.lock",
    "/Cargo.toml",
    "/LICENSE",
    "/NOTICE",
    "/README.md",
    "/CHANGELOG.md",
    "/SECURITY.md",
    "/THIRD_PARTY_LICENSES.md",
    "/docs/architecture.md",
    "/docs/compatibility.md",
    "/docs/live-compatibility-evidence.md",
    "/docs/privacy.md",
    "/docs/pilot-checklist.md",
    "/docs/product-roadmap.md",
    "/docs/release-checklist.md",
    "/fixtures/**/*.json",
    "/scripts/compatibility/*.mjs",
    "/scripts/validate-live-compatibility.mjs",
    "/src/**/*.rs",
    "/tests/**/*.rs",
    "/ui/dist/index.html",
    "/ui/dist/assets/*.css",
    "/ui/dist/assets/*.js",
]

[[bin]]
name = "previously"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
axum = { version = "0.8", features = ["http1", "json", "tokio"] }
chrono = { version = "0.4", features = ["serde", "clock"] }
clap = { version = "4.5", features = ["derive", "env"] }
directories = "6.0"
hex = "0.4"
http = "1.2"
libc = "0.2"
mime_guess = "2.0"
once_cell = "1.20"
rand = "0.9"
regex = "1.11"
rusqlite = { version = "0.34", features = ["bundled", "backup", "chrono", "serde_json"] }
rust-embed = "8.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tiktoken-rs = "0.7"
tokio = { version = "1.44", features = ["full"] }
toml_edit = "0.22"
tower-http = { version = "0.6", features = ["limit", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1.16", features = ["v4", "v7", "serde"] }
walkdir = "2.5"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.19"

[profile.release]
lto = "thin"
strip = true
